# cpp_snippets

./: .gitignore  CMakeLists.txt  clean.sh  compile_commands.json  templates_export.cpp  templates_export.h  union_find.cpp  union_find.exe.stackdump  utils.hpp
.clangd/index/: alloc.cpp.026FCA8211380B01.idx  app.cpp.E1C5022403507E8A.idx  cloneable.cpp.5264EC6A99EAE49E.idx  curried.hpp.9B8BA76B313E9611.idx  findpos.cpp.4049D890494DE679.idx  floating.cpp.7983107EE3346CB1.idx  fsm.cpp.0CBE96F8B0311685.idx  main.cpp.01896A6195244A07.idx  main.cpp.08D2DAA8F7E319D5.idx  main.cpp.29639E4A715E5062.idx  main.cpp.29DEDE1E284725AA.idx  main.cpp.2FABFE6D7F805AD5.idx  main.cpp.460059A07BA602A7.idx  main.cpp.4D6E923F5259FB96.idx  main.cpp.5B1411451B002258.idx  main.cpp.5D1E0BD659F19286.idx  main.cpp.6133E061DC2AA2C0.idx  main.cpp.6B012870AFA38246.idx  main.cpp.71515862B24D7B8A.idx  main.cpp.730EAEDFFEE58D40.idx  main.cpp.73E7F75FA2C50930.idx  main.cpp.794DB940EA07F3B9.idx  main.cpp.91EF3C5B6D3A39EC.idx  main.cpp.928C4D53F4A09108.idx  main.cpp.A3E108C47BF3CC74.idx  main.cpp.B0A82D368C7356CB.idx  main.cpp.B6ADB55D246FCE00.idx  main.cpp.C0B30AB445C602A6.idx  main.cpp.CC2C1B98912BDBB8.idx  main.cpp.D38B6E9EE99CCA55.idx  main.cpp.DD1265E3942B83A0.idx  main.hugetable.cpp.3BA1CD09F6457879.idx  main.mounted.cpp.C28A539683981767.idx  main.nohugetable.cpp.4150B94AA2883253.idx  r3.cpp.6EB0EC1D78436E0C.idx  rev.cpp.0CCBBAD97728658C.idx  reverse_string.cpp.8DE989526E3F7F60.idx  segment_tree_rqs.cpp.E79A743A19DD744D.idx  shared.cpp.373AFEEEF8A0CC95.idx  shared_ptr.cpp.D24BF07A5E0A1D3D.idx  (+13 more)
LinuxDemo/: main.cpp
adl/: adl.cpp  sqrt.cpp
algos/: findpos.cpp  segment_tree_rqs.cpp  segment_tree_rqs.exe.stackdump
alignemnt/: Makefile  app.cpp
asm/: hello  hello.s  integer  integer.s  template  template.s  variable.inc  zeroflag  zeroflag.s
atomic/: Makefile  main  main.cpp
auto/: main.cpp
common/: Makefile  utils.h
concepts/: Makefile  main.cpp
cpp/: alloc.cpp  alloc.exe.stackdump  cloneable.cpp  disabled_template_deduction.cpp  floating.cpp  fsm.cpp  main.cpp  r3.cpp  rev.cpp  rev.exe.stackdump  reverse_string.cpp  reverse_string.exe.stackdump  shared.cpp  shared_ptr.cpp  shared_ptr2.cpp  shared_ptr2.exe.stackdump  shared_ptr3.cpp  static_template.cpp  std_shared_ptr.cpp  std_shared_ptr.exe.stackdump  strict_aliasing.cpp  structs.cpp  template_deduction.cpp  typetraits.cpp
cython/helloworld/: hello.py
disable_inline/: A.cpp  C.cpp  C.hpp  Makefile  Variable.h  app  main.cpp
disable_linker/: a.out  dynamic.h  main.cpp  seg.sh  static.cpp
disable_list/: header_test.cpp  main.cpp
disable_whitebay/: Context.hpp  Makefile  Mysort.hpp  Utils.hpp  Worker.hpp  app.cpp  generate_test.cpp  main.cpp  notes.txt  to_string_test.cpp
diskio/: main.cpp  to_string.cpp
elf/: main.cpp
exception/: main.cpp
float/: Makefile  Makefile1  main.cpp
folly/: CMakeLists.txt  executor.cpp  io_demo.cpp
functional/: main.cpp
hugepage/: Makefile  main.cpp  main.hugetable.cpp  main.mounted.cpp  main.nohugetable.cpp
inline/: B.cpp  Makefile  app  main.cpp
linker/: A.h  C.cpp  Makefile  dynamic.cpp  static.h
list/: main.cpp
logger/: logger.cpp
nasm/: a.out  hello.asm
nasm/low-level-programming/assignments/1_io_library/stud/: test.py
operators/: Makefile  constructor  constructor.cpp  main.cpp
optional/: main.cpp
ptr/: main.cpp
r3/: main.cpp
rvalues/: main.cpp
string/: Makefile  app  main  main.cpp
template/: Makefile  main.cpp
templates/: curried.hpp  main.cpp
vtable/: a.out  build.sh  main.cpp
vtable2/: a.out  build.sh  main.cpp
whitebay/: Context.hpp  Mysort.hpp  Utils.hpp  Worker.hpp  app.cpp  generate_test.cpp  notes.txt  to_string_test.cpp
